# Fake2Truth

./: .gitignore  Dockerfile.backend  Dockerfile.external_api  Dockerfile.internal_api  README.md  db_manager.py  docker-compose.yml  external_api.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_log_manager.py
backend/: main.py
backend/api/: __init__.py  card.py
backend/api/internal/: __init__.py  qr_code.py  url.py  user.py
backend/data/: access_log_data.py  hash_data.py  user_data.py
backend/gengertor/: qr_code_generator.py  url_gengertor.py
backend/responser/: json_error.py  redirect.py
backend/utils/: access_log_manager.py  config_manager.py  datetime_helper.py  db_manager.py  hash_helper.py  message_sender.py  run_log_manager.py  url_generator.py  url_manager.py  user_data_manager.py  validate_helper.py
external_api/: access_log_manager.py  external_api_main.py  validation.py
internal_api/: internal_api_main.py  url_generator.py
utils/: access_log_manager.py  config_manager.py  datetime_helper.py  db_manager.py  user_data_manager.py
