[tool.poetry]
name = "Fake2Truth"
version = "0.2.0"
description = ""
authors = ["FHU-yezi <yehaowei20060411@qq.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^22.6.0"
httpx = "^0.23.0"
PyYAML = "^6.0"
motor = "^3.0.0"
qrcode = "^7.3.1"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
flake8 = "^5.0.2"
yapf = "^0.32.0"
types-PyYAML = "^6.0.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
